final project fixes

--- a/CovidXWebApp/Views/Account/Login.cshtml
+++ b/CovidXWebApp/Views/Account/Login.cshtml
@@ -5,6 +5,10 @@
 
 @model SigninModel
 
+<div class="row justify-content-center">
+    <partial name="CovidX/Page/_Alert" model="Model.Alert" />
+</div>
+
 <body class="hold-transition login-page">
     <partial name="CovidX/_Styles" />
     <div class="login-box">
