--- a/CovidXWebApp/Views/Home/Table/_PatientTestRequest.cshtml
+++ b/CovidXWebApp/Views/Home/Table/_PatientTestRequest.cshtml
@@ -55,7 +55,7 @@
                             <!-- TABLE HEADERS -->
                             <th>Patient</th>
                             <th>Request Date</th>
-                            <th>Test Status</th>
+                            <th>Request Status</th>
                             <th>Test Location</th>
                             <th>Test Date</th>
                             <th>Time Slot</th>
