--- a/CovidXWebApp/Views/Manager/ReportTable.cshtml
+++ b/CovidXWebApp/Views/Manager/ReportTable.cshtml
@@ -170,7 +170,7 @@
                                         @item.Test.TestResult
                                     </td>
                                     <td>
-                                        Viwe Nkepu
+                                        Mandla Khumalo
                                     </td>
 
 
