--- a/CovidXWebApp/Views/Nurse/Modal/_PerformTestModal.cshtml
+++ b/CovidXWebApp/Views/Nurse/Modal/_PerformTestModal.cshtml
@@ -43,10 +43,10 @@
                 </div>
 
                 <div class="form-group row">
-                    <label asp-for="Temperature" class="text-muted col-sm-2 col-form-label"></label>
+                    <label asp-for="Temp" class="text-muted col-sm-2 col-form-label"></label>
                     <div class="col-sm-10">
-                        <input asp-for="Temperature" class="form-control">
-                        <span asp-validation-for="Temperature" class="error invalid-feedback" />
+                        <input asp-for="Temp" class="form-control">
+                        <span asp-validation-for="Temp" class="error invalid-feedback" />
                     </div>
                 </div>
 
