--- a/CovidXWebApp/Views/Profile/ViewProfile.cshtml
+++ b/CovidXWebApp/Views/Profile/ViewProfile.cshtml
@@ -55,6 +55,12 @@
                 <li class="list-group-item">
                     <b>Dependents</b> <div class="float-right">@patient.Dependents.Count()</div>
                 </li>
+                <li class="list-group-item">
+                    <small class="text-red mr-1">
+                        <i class="fas fa-heartbeat"></i>
+                    </small>
+                    <b>Medical Aid</b> <div class="float-right">@patient.MedicalAidPlan.MedicalAidScheme.Description</div>
+                </li>
             </ul>
 
             <a href="@Url.Action(action: "Dependent", controller: "Profile")" class="btn btn-outline-primary btn-block"><b>Edit Profile</b></a>
