changes for presentation

--- a/CovidXWebApp/Views/Calendar/Index.cshtml
+++ b/CovidXWebApp/Views/Calendar/Index.cshtml
@@ -6,7 +6,7 @@
 
 @model CalendarViewModel
 
-@inject ICalendarService _calendarService
+@inject ICalendarAPI _calendarService
 @inject UserManager<EFCoreIdentityUser> _userManager
 
 @{
