--- a/CovidXWebApp/Views/Profile/Create.cshtml
+++ b/CovidXWebApp/Views/Profile/Create.cshtml
@@ -4,7 +4,7 @@
 
 @model PatientCreateViewModel
 
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 @inject UserManager<EFCoreIdentityUser> _userManager
 @{
 
