--- a/CovidXWebApp/Views/_ViewImports.cshtml
+++ b/CovidXWebApp/Views/_ViewImports.cshtml
@@ -2,8 +2,8 @@
 @using EFCore.Model
 @using Utility
 @using Microsoft.AspNetCore.Identity
-@using CovidXWebApp.Services
-@using CovidXWebApp.Services.Interface
+@using CovidXWebApp.API
+@using CovidXWebApp.API.Interface
 
 
 @using EFCore.EFCoreConfigurationMethods
