--- a/CovidXWebApp/Views/Home/Dashboard.cshtml
+++ b/CovidXWebApp/Views/Home/Dashboard.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Dashboard";
 }
 
-@inject IManagerService managerService
+@inject IManagerAPI managerService
 
 @{
     string headerText = "Dashboard";
