--- a/CovidXWebApp/Views/Home/NurseDashboard.cshtml
+++ b/CovidXWebApp/Views/Home/NurseDashboard.cshtml
@@ -3,7 +3,7 @@
 
 }
 
-@inject INurseServices _nurseService
+@inject INurseAPI _nurseService
 @inject UserManager<EFCoreIdentityUser> _userManager
 
 
