--- a/CovidXWebApp/Views/Manager/ReportTable.cshtml
+++ b/CovidXWebApp/Views/Manager/ReportTable.cshtml
@@ -4,7 +4,7 @@
 }
 
 @model ManagerReportViewModel
-@inject INurseServices _nurseService
+@inject INurseAPI _nurseService
 
 @{
     string headerText = "Reports Table";
