--- a/CovidXWebApp/Views/Nurse/NurseCreate.cshtml
+++ b/CovidXWebApp/Views/Nurse/NurseCreate.cshtml
@@ -9,7 +9,7 @@
 
 @model NurseCreateViewModel
 
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 
 @section PageHeader{
 
