--- a/CovidXWebApp/Views/Nurse/NurseDetails/_SelectSuburbsPreferred.cshtml
+++ b/CovidXWebApp/Views/Nurse/NurseDetails/_SelectSuburbsPreferred.cshtml
@@ -1,6 +1,6 @@
 ﻿@model NurseSuburbsModel
 
-@inject INurseServices _nurseService
+@inject INurseAPI _nurseService
 
 <div class="form-group row">
     <label asp-for="SelectedSuburbsIds" class="text-muted col-sm-2 col-form-label">Select favourite Suburbs</label>
