--- a/CovidXWebApp/Views/Nurse/NurseViewProfile.cshtml
+++ b/CovidXWebApp/Views/Nurse/NurseViewProfile.cshtml
@@ -10,7 +10,7 @@
 
 
 @model NurseSuburbsModel
-@inject INurseServices _nurseService
+@inject INurseAPI _nurseService
 @inject UserManager<EFCoreIdentityUser> _usermanager
 
 
