--- a/CovidXWebApp/Views/Profile/DependentDetails/_MedicalAidPlan.cshtml
+++ b/CovidXWebApp/Views/Profile/DependentDetails/_MedicalAidPlan.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DependentCreateViewModel
 
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 <!-- Medical Aid Plan INPUT START -->
 <!-- SWITCH MedicalAid Status INPUT START -->
 <div class="form-group">
