--- a/CovidXWebApp/Views/Profile/ProfileDetails/_MedicalAidPlan.cshtml
+++ b/CovidXWebApp/Views/Profile/ProfileDetails/_MedicalAidPlan.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PatientCreateViewModel
 
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 <!-- SWITCH MedicalAid Status INPUT START -->
 <div class="form-group">
     <div class="custom-control custom-switch">
