--- a/CovidXWebApp/Views/Profile/RequestTest.cshtml
+++ b/CovidXWebApp/Views/Profile/RequestTest.cshtml
@@ -8,7 +8,7 @@
 }
 
 @model TestRequestViewModel
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 
 @section PageHeader{
 
