--- a/CovidXWebApp/Views/Profile/Table/_TestResultInfo.cshtml
+++ b/CovidXWebApp/Views/Profile/Table/_TestResultInfo.cshtml
@@ -1,4 +1,4 @@
-﻿@inject IPatientServices _patientService
+﻿@inject IPatientAPI _patientService
 @inject UserManager<EFCoreIdentityUser> _usermanager
 
 
