--- a/CovidXWebApp/Views/Profile/ViewTestResults.cshtml
+++ b/CovidXWebApp/Views/Profile/ViewTestResults.cshtml
@@ -3,7 +3,7 @@
 
 }
 
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 @inject UserManager<EFCoreIdentityUser> _usermanager
 
 
