--- a/CovidXWebApp/Views/Home/PatientDashboard.cshtml
+++ b/CovidXWebApp/Views/Home/PatientDashboard.cshtml
@@ -5,7 +5,7 @@
 
 
 @model TestRequestDetailModel
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 @inject UserManager<EFCoreIdentityUser> _userManager
 
 @{
