--- a/CovidXWebApp/Views/Home/Table/_PatientTestRequest.cshtml
+++ b/CovidXWebApp/Views/Home/Table/_PatientTestRequest.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @model TestRequestDetailModel
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 @inject UserManager<EFCoreIdentityUser> _userManager
 
 @{
