--- a/CovidXWebApp/Views/Nurse/NurseDetails/_NurseInfo.cshtml
+++ b/CovidXWebApp/Views/Nurse/NurseDetails/_NurseInfo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model NurseCreateViewModel
 
-@inject INurseServices _nurseService
+@inject INurseAPI _nurseService
 @inject UserManager<EFCoreIdentityUser> _userManager
 
 @{
