--- a/CovidXWebApp/Views/Nurse/ScheduledTestRequests.cshtml
+++ b/CovidXWebApp/Views/Nurse/ScheduledTestRequests.cshtml
@@ -5,7 +5,7 @@
 
 
 
-@inject INurseServices _nurseService
+@inject INurseAPI _nurseService
 @inject UserManager<EFCoreIdentityUser> _userManager
 
 
