--- a/CovidXWebApp/Views/Profile/DependentDetails/_ProfileInfo.cshtml
+++ b/CovidXWebApp/Views/Profile/DependentDetails/_ProfileInfo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DependentCreateViewModel
 
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 @inject UserManager<EFCoreIdentityUser> _userManager;
 
 @section Scripts{
