--- a/CovidXWebApp/Views/Profile/ProfileDetails/_ProfileInfo.cshtml
+++ b/CovidXWebApp/Views/Profile/ProfileDetails/_ProfileInfo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PatientCreateViewModel
 
-@inject IPatientServices _patientService
+@inject IPatientAPI _patientService
 @inject UserManager<EFCoreIdentityUser> _userManager
 
 @{
